--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,3 +1,16 @@
 @tailwind base;
 @tailwind components;
+
+.btn{
+    @apply bg-blue-500 text-white font-bold py-2 px-4 rounded
+}
+
+.btn:disabled{
+    @apply opacity-50
+}
+
+.btn:hover{
+    @apply bg-blue-700
+}
+
 @tailwind utilities;
