--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -2,7 +2,7 @@
 @tailwind components;
 
 .btn{
-    @apply bg-blue-500 text-white font-bold py-2 px-4 rounded
+    @apply bg-gray-500 text-white font-bold py-2 px-4 rounded
 }
 
 .btn:disabled{
@@ -10,7 +10,7 @@
 }
 
 .btn:hover{
-    @apply bg-blue-700
+    @apply bg-gray-700
 }
 
 @tailwind utilities;
